# FileIndexedDictionary

./: CMakeLists.txt
Files/: dictionary-OriginalForm.txt  dictionary.txt  indexedDictionary  test.txt
HashDictionary/: Queue.c  Queue.h  file.c  file.h  list.c  list.h  main.c  main.h  typeDefinition.h  wordFinder.c  wordFinder.h  wordTreeConstruction.c  wordTreeConstruction.h  wordTreeIterator.c  wordTreeIterator.h  wordTreeTranslation.c  wordTreeTranslation.h
HashDictionary.xcodeproj/: project.pbxproj
HashDictionary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HashDictionary.xcodeproj/project.xcworkspace/xcshareddata/: HashDictionary.xccheckout
HashDictionary.xcodeproj/xcuserdata/ThomazFB.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
HashDictionary.xcodeproj/xcuserdata/ThomazFB.xcuserdatad/xcschemes/: HashDictionary.xcscheme  xcschememanagement.plist
